# ml_problems

./: .gitignore  .pre-commit-config.yaml  README.md  ml_problems.code-workspace  pyproject.toml  start_jupyter.sh
income_classification/: predict_income.ipynb  predict_income_catboost.ipynb  readme.md
indian_food/: indian_food_eda.ipynb  indian_food_flavor_classification.ipynb
mushroom_classification/: mushroom_classification.ipynb  mushroom_classification_catboost.ipynb  readme.md
netflix_movies/: netflix_data_analysis.ipynb
pima_diabetic/: diabetes_gradient_boosting.ipynb  ensemble_classifiers.ipynb  feature_engineering.ipynb  outlier_processing.ipynb  predict_diabetes.ipynb  readme.md
